@@ -128,7 +128,7 @@
      
         <para>
             The <methodname>push</methodname>() method pushes other iterator onto it. All calls performed 
-            on it are forwarded tot other. If other returns GST_ITERATOR_DONE, it is popped again and calls
+            on it are forwarded tot other. If other returns gst.ITERATOR_DONE, it is popped again and calls
              are handled by it again.
         </para>
     </refsect2>
