@@ -44,7 +44,7 @@
   <title>Description</title>
 
   <para>
-    GstMiniObject is a baseclass like GObject, but has been stripped down of features to be fast and small. 
+    A gst.MiniObject is a baseclass like GObject, but has been stripped down of features to be fast and small. 
     It offers sub-classing and ref-counting in the same way as GObject does. It has no properties and no signal-support though.
   </para>
 </refsect1>
