@@ -767,7 +767,7 @@
             </varlistentry>
             <varlistentry>
                 <term><emphasis>Returns</emphasis>&nbsp;:</term>
-                <listitem><simpara> A result code indicating success of the operation. Any result code other than GST_FLOW_OK 
+                <listitem><simpara> A result code indicating success of the operation. Any result code other than gst.FLOW_OK 
                         is an error and buf should not be used. An error can occur if the pad is not connected or when the 
                         downstream peer elements cannot provide an acceptable buffer.</simpara></listitem>
             </varlistentry>
@@ -937,8 +937,9 @@
         
         <para>
             The <methodname>get_caps</methodname>() method gets the capabilities this pad can produce or consume. 
-            Note that this method doesn't necessarily returns the caps set by <methodname><link linkend="method-gstpad--set-caps">set_caps</link></methodname> 
-            gst_pad_get_caps returns all possible caps a pad can operate with, using the pad's get_caps function; 
+            Note that this method doesn't necessarily returns the caps set by
+             <methodname><link linkend="method-gstpad--set-caps">set_caps</link></methodname> 
+            ,it returns all possible caps a pad can operate with, using the pad's get_caps function; 
             this returns the pad template caps if not explicitly set.
         </para>
     </refsect2>
@@ -1057,13 +1058,13 @@
         <variablelist>
             <varlistentry>
                 <term><emphasis>Returns</emphasis>&nbsp;:</term>
-                <listitem><simpara> The <link linkend="class-gstpadtemplate"><classname>gst.PadTemplate</classname></link> from which this pad was instantiated,
-                        or <literal>None</literal> if this pad has no template.</simpara></listitem>
+                <listitem><simpara> The <link linkend="class-gstpadtemplate"><classname>gst.PadTemplate</classname></link> 
+                from which this pad was instantiated, or <literal>None</literal> if this pad has no template.</simpara></listitem>
             </varlistentry>
         </variablelist>
         
         <para>
-            The <methodname>get_pad_template</methodname>() method gets the template for <parameter>pad</parameter>.
+            The <methodname>get_pad_template</methodname>() method gets the template for pad.
         </para>
     </refsect2>
         
@@ -1084,7 +1085,7 @@
         </variablelist>
             
         <para>
-            The <methodname>get_pad_template</methodname>() method gets the template for <parameter>pad</parameter>.
+            The <methodname>get_pad_template</methodname>() method gets the template for pad.
         </para>
     </refsect2>
     
@@ -1929,10 +1930,10 @@
                 It will be called when the pad is linked with another pad.
             </para>
             <para>
-                The return value GST_PAD_LINK_OK should be used when the connection can be made.
+                The return value gst.PAD_LINK_OK should be used when the connection can be made.
             </para>
             <para>
-                The return value GST_PAD_LINK_REFUSED should be used when the connection cannot be made for some reason.
+                The return value gst.PAD_LINK_REFUSED should be used when the connection cannot be made for some reason.
             </para>
             <para>
                 If link is installed on a source pad, it should call the FIXME of the peer sink pad, if present.
@@ -2001,11 +2002,13 @@
             
             <para>
                 The <methodname>use_fixed_caps</methodname>() method is an helper function you can use that sets the 
-                gst_pad_get_fixed_caps_func as the getcaps function for the pad. 
-                This way the function will always return the negotiated caps or in case the pad is not negotiated, the padtemplate caps.
+                get_fixed_caps_func as the getcaps function for the pad. 
+                This way the function will always return the negotiated caps or in case the pad is not negotiated, the 
+                padtemplate caps.
             </para>
             <para>
-                Use this function on a pad that, once _set_caps() has been called on it, cannot be renegotiated to something else.
+                Use this function on a pad that, once _set_caps() has been called on it, cannot be renegotiated to 
+                something else.
             </para>
         </refsect2>
 </refsect1>
