@@ -148,7 +148,7 @@
         be used to perform queries on pads and elements.
     </para>
     <para>
-        Queries can be created using the gst_query_new_xxx() functions. Query values can be set using 
+        Queries can be created using the gst.query_new_xxx() functions. Query values can be set using 
         gst.Query.set_xxx(), 
         and parsed using gst.Query.parse_xxx() helpers.
     </para>
@@ -610,7 +610,7 @@
             </variablelist>
             
             <para>
-                The <methodname>query_new_position</methodname>() function constructss a new query stream position query object. 
+                The <methodname>query_new_position</methodname>() function constructs a new query stream position query object. 
                 A position query is used to query the current position of playback in the streams, in some format.
             </para>
         </refsect2>
@@ -699,7 +699,7 @@
                 <varlistentry>
                     <term><emphasis>Returns</emphasis>&nbsp;:</term>
                     <listitem><simpara> A <link linkend="class-gstiterator"><classname>gst.Iterator</classname></link> 
-                            of GstQueryTypeDefinition.</simpara></listitem>
+                            of Query Type Definition.</simpara></listitem>
                 </varlistentry>
             </variablelist>
             
@@ -729,12 +729,12 @@
                 </varlistentry>
                 <varlistentry>
                     <term><emphasis>Returns</emphasis>&nbsp;:</term>
-                    <listitem><simpara> A new GstQueryType or an already registered query with the same nick.</simpara></listitem>
+                    <listitem><simpara> A new Query Type or an already registered query with the same nick.</simpara></listitem>
                 </varlistentry>
             </variablelist>
             
             <para>
-                The <methodname>query_type_register</methodname>() function creates a new GstQueryType based 
+                The <methodname>query_type_register</methodname>() function creates a new Query Type based 
                 on the nick or return an already registered query with that nick.
             </para>
         </refsect2>
