@@ -1,3 +1,8 @@
+2007-10-09  Jens Persson
+
+    * Added Iterator and Format
+    * Tons of minor fixes
+
 2007-09-30  Jens Persson
     
     * Added ElementFactory, Task, Plugin, PluginFeature, Index and Structure
